--- a/BigDataIgnite/Workshop2016/header.tex
+++ b/BigDataIgnite/Workshop2016/header.tex
@@ -1,6 +1,7 @@
 \usepackage{fancyhdr}
+\usepackage{geometry}
+\geometry{papersize={12.8cm,8cm}}
 \pagestyle{fancy}
-% \usepackage[bottom=1in]{geometry}
 \renewcommand{\headrulewidth}{0pt}
-\rhead{\includegraphics[width = .15\textwidth]{images/BDI-logo.png}\vspace*{-1.2cm}}
+\rhead{\includegraphics[width = .15\textwidth]{../images/BDI-logo.png}\vspace*{-1.2cm}}
 
