--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,3 +1,10 @@
 # Talks by R Pruim
 
 Page in progress.
+
+  * Big Data Ignite 2016
+ 
+    * [slides from workshop on Shiny](bigdataignite2016/shiny/04-Shiny.pdf)
+    * [shiny cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/02/shiny-cheatsheet.pdf)
+    
+  
