--- a/docs/city-of-hope-2018/index.Rmd
+++ b/docs/city-of-hope-2018/index.Rmd
@@ -20,7 +20,10 @@ knitr::opts_chunk$set(echo = TRUE)
    
  
  * Data Wrangling: [rsconnect.calvin.edu//tidyverse-city-of-hope-2018/](http://rsconnect.calvin.edu/tidyverse-city-of-hope-2018/)
- 
+
+## Cheat Sheets
+
+R Studio is assembling a number of useful cheat sheets at [www.rstudio.com/resources/cheatsheets/](https://www.rstudio.com/resources/cheatsheets/)
  
 ## R Studio Server
 
@@ -28,5 +31,22 @@ You are welcome to use an account on Calvin's RStudio server using the username 
 provided.  Here's the link to get there.
 
   * [rstudio.calvin.edu](http://rstudio.calvin.edu)
+  
+These accounts will likely be recycled in May or June, 2018.
+  
+## Running R Locally
+
+You are welcome to work in your own local copy of R and RStudio if you prefer.  This will work best if you have a recent versions 
+
+  * [R](http://cran.r-project.org)
+  * [RStudio](http://rstudio.com)
+  * the [`mosaic`](https://github.com/ProjectMOSAIC/mosaic) package and its dependencies
+  * the [`ggformula`](https://github.com/ProjectMOSAIC/mosaic) package and its dependencies
+  * the [`tidyverse`](https://github.com/tidyverse/tidyverse) package and its dependencies
+  
+Packages can be installed or updated using the Packages tab in RStudio.
+
+
+  
   
   
