--- a/docs/jmm-2018/index.Rmd
+++ b/docs/jmm-2018/index.Rmd
@@ -82,6 +82,8 @@ Packages can be installed or updated using the Packages tab in RStudio.
 
  * If you ask, RStudio will provide you with the professional server for free for qualifying academic purposes.  Contact them for details to see if you qualify.
  
+ * If you want to server tutorials, you will also need to set up RStudio Connect (and maybe a shiny server).  These aren't any harder than setting up RStudio Server, but they are separate software installs.
+ 
  * RStudio has lots of documentation about how to install and configure. For example, here is the [RStudio Server Pro admin guide](http://docs.rstudio.com/ide/server-pro/)
  
  * Here's a [blog post](https://www.r-bloggers.com/how-to-get-your-very-own-rstudio-server-and-shiny-server-with-digitalocean/) discussing how to do this with Digital Ocean.
