add an intro sentence

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,5 +1,7 @@
 # Recent Presentations by R Pruim
 
+Here are slides and other resources from some of my presentations.
+
   * [Mixing D3 and R](D3/BDI2019/BDI2019-slides.html) (Big Data Ignite 2019)
 
   * [Domino Arithmetic](domino-arithmetic/domino-arithmetic-slides.html) (GVSU Math Path 2019)
