--- a/docs/GAISE-for-majors/JSM-2020/GAISE-for-majors-xaringan.Rmd
+++ b/docs/GAISE-for-majors/JSM-2020/GAISE-for-majors-xaringan.Rmd
@@ -82,7 +82,7 @@ Post questions/comments in the session chat as we go along.
 
 ---
 
-class: middle, center, inverse
+class: middle, center
 
 ## GAISE for Majors
 
